--- a/frontend/lien-he.html
+++ b/frontend/lien-he.html
@@ -1,88 +1,194 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<title>Liên hệ | BabyCutie</title>
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/lien-he.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Liên hệ | BabyCutie</title>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/lien-he.css">
 </head>
 <body>
 
 <!-- ===== HEADER ===== -->
 <header class="header">
     <div class="container header-wrap">
-        <div class="logo" onclick="location='index.html'">
-            <img src="images/logo2.jpg">
+        <!-- LOGO -->
+        <div class="logo" onclick="window.location='index.html'">
+            <img src="images/logo2.jpg" alt="BabyCutie">
             <span>BabyCutie</span>
         </div>
-        <nav>
+
+        <!-- SEARCH -->
+        <div class="search">
+            <i class="fa fa-search"></i>
+            <input type="text" placeholder="Tìm món ăn cho bé...">
+        </div>
+
+        <!-- MENU -->
+        <nav class="main-menu">
             <a href="index.html">Trang chủ</a>
             <a href="thuc-don.html">Thực đơn</a>
             <a href="tin-tuc.html">Tin tức</a>
             <a href="lien-he.html" class="active">Liên hệ</a>
         </nav>
+
+        <!-- CART -->
+        <div class="cart-icon" onclick="window.location='gio-hang.html'">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <span class="cart-count" id="cartCount">0</span>
+        </div>
+
+        <!-- LOGIN -->
+        <div class="login-group">
+            <div class="dropdown">
+                <button class="btn-login dropdown-toggle" data-bs-toggle="dropdown">
+                    <i class="fa fa-user"></i> Đăng nhập
+                </button>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="login-khach.html">
+                            👨‍👩‍👧 Khách hàng
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="login-admin.html">
+                            🛠 Admin
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </header>
 
 <!-- ===== BANNER ===== -->
 <section class="page-banner">
-    <h1>📞 Liên hệ</h1>
+    <h1>📞 Liên hệ với chúng tôi</h1>
+    <p style="margin-top: 10px; color: #666; font-size: 16px;">Chúng tôi luôn sẵn sàng lắng nghe và hỗ trợ bạn</p>
+</section>
+
+<!-- ===== THÔNG TIN LIÊN HỆ ===== -->
+<section class="container mt-4">
+    <div class="contact-info">
+        <div class="info-card">
+            <div class="info-icon">📍</div>
+            <h5>Địa chỉ</h5>
+            <p>123 Đường ABC, Quận XYZ<br>Hà Nội, Việt Nam</p>
+        </div>
+        <div class="info-card">
+            <div class="info-icon">📞</div>
+            <h5>Hotline</h5>
+            <p>1900 1234<br>024 1234 5678</p>
+        </div>
+        <div class="info-card">
+            <div class="info-icon">📧</div>
+            <h5>Email</h5>
+            <p>babycutie@gmail.com<br>support@babycutie.com</p>
+        </div>
+        <div class="info-card">
+            <div class="info-icon">🕒</div>
+            <h5>Giờ làm việc</h5>
+            <p>Thứ 2 - Chủ nhật<br>7:00 - 20:00</p>
+        </div>
+    </div>
 </section>
 
 <!-- ===== FORM LIÊN HỆ ===== -->
-<section class="container contact mt-4">
+<section class="container mt-4">
+    <div class="contact">
+        <h3 style="text-align: center; margin-bottom: 25px; color: #ff5f7e;">
+            <i class="fa fa-envelope"></i> Gửi tin nhắn cho chúng tôi
+        </h3>
 
-    <input id="hoTen" placeholder="Họ tên">
-    <input id="email" placeholder="Email">
-    <textarea id="noiDung" placeholder="Nội dung"></textarea>
+        <form id="contactForm">
+            <div class="form-group">
+                <label for="hoTen">
+                    <i class="fa fa-user"></i> Họ và tên <span class="required">*</span>
+                </label>
+                <input 
+                    type="text" 
+                    id="hoTen" 
+                    name="hoTen"
+                    placeholder="Nhập họ và tên của bạn"
+                    required>
+                <span class="error-message" id="hoTenError"></span>
+            </div>
 
-    <button onclick="guiLienHe()">
-        Gửi liên hệ
-    </button>
+            <div class="form-group">
+                <label for="email">
+                    <i class="fa fa-envelope"></i> Email <span class="required">*</span>
+                </label>
+                <input 
+                    type="email" 
+                    id="email" 
+                    name="email"
+                    placeholder="example@email.com"
+                    required>
+                <span class="error-message" id="emailError"></span>
+            </div>
 
+            <div class="form-group">
+                <label for="noiDung">
+                    <i class="fa fa-comment"></i> Nội dung tin nhắn <span class="required">*</span>
+                </label>
+                <textarea 
+                    id="noiDung" 
+                    name="noiDung"
+                    placeholder="Nhập nội dung bạn muốn gửi cho chúng tôi..."
+                    rows="6"
+                    required></textarea>
+                <span class="error-message" id="noiDungError"></span>
+            </div>
+
+            <button type="submit" id="submitBtn" class="btn-submit">
+                <span id="submitText">
+                    <i class="fa fa-paper-plane"></i> Gửi liên hệ
+                </span>
+                <span id="submitLoading" style="display: none;">
+                    <span class="spinner-border spinner-border-sm" role="status"></span>
+                    Đang gửi...
+                </span>
+            </button>
+
+            <div id="successMessage" class="success-message" style="display: none;">
+                <i class="fa fa-check-circle"></i>
+                <span>Cảm ơn bạn đã liên hệ! Chúng tôi sẽ phản hồi sớm nhất có thể.</span>
+            </div>
+
+            <div id="errorMessage" class="error-message" style="display: none;">
+                <i class="fa fa-exclamation-circle"></i>
+                <span id="errorText">Có lỗi xảy ra. Vui lòng thử lại sau.</span>
+            </div>
+        </form>
+    </div>
 </section>
 
 <!-- ===== FOOTER ===== -->
 <footer class="footer">
     <div class="container footer-wrap">
-        <div><b>BabyCutie</b></div>
-        <div>Hà Nội</div>
+        <div>
+            <b>BabyCutie</b>
+            <p>Cháo dinh dưỡng cho bé yêu</p>
+        </div>
+        <div>
+            <p>📞 Hotline: 1900 1234</p>
+            <p>📧 babycutie@gmail.com</p>
+        </div>
     </div>
 </footer>
 
-<!-- ===== JS GỬI LIÊN HỆ ===== -->
-<script>
-function guiLienHe() {
-    const hoTen = document.getElementById("hoTen").value;
-    const email = document.getElementById("email").value;
-    const noiDung = document.getElementById("noiDung").value;
+<!-- ===== JS RIÊNG ===== -->
+<script src="js/lien-he.js"></script>
 
-    if (!hoTen || !email || !noiDung) {
-        alert("Vui lòng nhập đầy đủ thông tin");
-        return;
-    }
-
-    fetch("http://127.0.0.1:5000/api/lien-he", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-            hoTen: hoTen,
-            email: email,
-            noiDung: noiDung
-        })
-    })
-    .then(res => res.json())
-    .then(() => {
-        alert("✅ Gửi liên hệ thành công!");
-        document.getElementById("hoTen").value = "";
-        document.getElementById("email").value = "";
-        document.getElementById("noiDung").value = "";
-    })
-    .catch(() => {
-        alert("❌ Có lỗi xảy ra, vui lòng thử lại");
-    });
-}
-</script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
