--- a/frontend/tin-tuc.html
+++ b/frontend/tin-tuc.html
@@ -1,28 +1,70 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<title>Tin tức | BabyCutie</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tin tức | BabyCutie</title>
 
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/tin-tuc.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/tin-tuc.css">
 </head>
 <body>
 
 <!-- ===== HEADER ===== -->
 <header class="header">
     <div class="container header-wrap">
-        <div class="logo" onclick="location='index.html'">
-            <img src="images/logo2.jpg">
+        <!-- LOGO -->
+        <div class="logo" onclick="window.location='index.html'">
+            <img src="images/logo2.jpg" alt="BabyCutie">
             <span>BabyCutie</span>
         </div>
-        <nav>
+
+        <!-- SEARCH -->
+        <div class="search">
+            <i class="fa fa-search"></i>
+            <input type="text" placeholder="Tìm món ăn cho bé...">
+        </div>
+
+        <!-- MENU -->
+        <nav class="main-menu">
             <a href="index.html">Trang chủ</a>
             <a href="thuc-don.html">Thực đơn</a>
             <a href="tin-tuc.html" class="active">Tin tức</a>
             <a href="lien-he.html">Liên hệ</a>
         </nav>
+
+        <!-- CART -->
+        <div class="cart-icon" onclick="window.location='gio-hang.html'">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <span class="cart-count" id="cartCount">0</span>
+        </div>
+
+        <!-- LOGIN -->
+        <div class="login-group">
+            <div class="dropdown">
+                <button class="btn-login dropdown-toggle" data-bs-toggle="dropdown">
+                    <i class="fa fa-user"></i> Đăng nhập
+                </button>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="login-khach.html">
+                            👨‍👩‍👧 Khách hàng
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="login-admin.html">
+                            🛠 Admin
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </header>
 
@@ -33,7 +75,22 @@
 
 <!-- ===== DANH SÁCH TIN ===== -->
 <section class="container mt-4">
-    <div id="newsList"></div>
+    <!-- Loading state -->
+    <div id="loadingState" class="text-center" style="padding: 40px;">
+        <div class="spinner-border text-primary" role="status" style="color: #ff5f7e !important;">
+            <span class="visually-hidden">Đang tải...</span>
+        </div>
+        <p style="margin-top: 15px; color: #999;">Đang tải tin tức...</p>
+    </div>
+    
+    <!-- News list container -->
+    <div id="newsList" style="display: none;"></div>
+    
+    <!-- Error state -->
+    <div id="errorState" style="display: none; text-align: center; padding: 40px;">
+        <p style="color: #ff5f7e; font-size: 18px;">⚠️ Không thể tải tin tức. Vui lòng thử lại sau.</p>
+        <button class="btn-primary mt-3" onclick="loadTinTuc()">Thử lại</button>
+    </div>
 </section>
 
 <!-- ===== FOOTER ===== -->
@@ -46,6 +103,9 @@
 
 <!-- ===== JS RIÊNG ===== -->
 <script src="js/tin-tuc.js"></script>
+
+<!-- Bootstrap JS (for spinner) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
